test(acompanhamento): cobrir contrato publico
refactor(clientes): separar casos de uso e contratos

refactor(orcamentos): separar versionamento e notificacao

fix(reparos): reforçar autorização, concorrência e baixa de estoque

- Restringe ações conforme o perfil e o mecânico atribuído
- Adiciona bloqueios pessimistas nas operações concorrentes
- Impede baixa parcial quando há estoque insuficiente
- Protege relacionamentos com a migration V43
- Atualiza os testes automatizados

refactor(estoque): separar baixa e proteger concorrencia

refactor(veiculos): isola casos de uso de seguranca e persistencia

- cria gateways e DTOs internos para veículos
- isola o acesso ao usuário atual via CurrentUserGateway
- move o mapper REST para Presentation
- adiciona adapters de persistência e policy de placa
- preserva contratos REST, filtros, ownership e fluxo de OS
- adiciona e ajusta testes unitários e de integração

refactor(seguranca): isola autenticacao e acesso de usuario

feat(quality): implement refinamento técnico de infraestrutura

  - Adiciona testes de cobertura para casos críticos do backend
  - Reforça limites arquiteturais com ArchUnit
  - Atualiza baselines, documentação de qualidade e Definition of Done
  - Publica artefato de cobertura do backend no CI

refactor(ordemServico): Refatora Ordem Serviço

refactor(notificacoes): isola envio de e-mail e ajusta mensagens de sucesso