@@ -1,16 +1,15 @@
 package com.autoflow.application.usecases.ordemservico.acompanhamento;
 
 import com.autoflow.application.dto.ordemservico.acompanhamento.AcompanhamentoOrdemServicoOutput;
-import com.autoflow.application.gateway.ClienteGateway;
+import com.autoflow.application.gateway.AcompanhamentoMapperGateway;
 import com.autoflow.application.gateway.HistoricoStatusOsGateway;
 import com.autoflow.application.gateway.OrcamentoGateway;
 import com.autoflow.application.gateway.OrdemServicoGateway;
+import com.autoflow.application.gateway.VeiculoClienteGateway;
 import com.autoflow.domain.orcamento.OrcamentoEntity;
 import com.autoflow.domain.orcamento.StatusOrcamento;
 import com.autoflow.domain.ordemservico.HistoricoStatusOsEntity;
 import com.autoflow.domain.ordemservico.OrdemServicoEntity;
-import com.autoflow.infrastructure.persistence.entity.cliente.ClienteEntity;
-import com.autoflow.infrastructure.persistence.mapper.AcompanhamentoMapper;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -26,236 +25,109 @@ import java.util.Optional;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-
 @ExtendWith(MockitoExtension.class)
 class AcompanharOrdemServicoUseCaseTest {
 
     @Mock
-    private ClienteGateway clienteGateway;
-
+    private VeiculoClienteGateway clienteGateway;
     @Mock
     private OrdemServicoGateway ordemServicoGateway;
-
     @Mock
     private OrcamentoGateway orcamentoGateway;
-
     @Mock
     private HistoricoStatusOsGateway historicoStatusOsGateway;
-
     @Mock
-    private AcompanhamentoMapper acompanhamentoMapper;
+    private AcompanhamentoMapperGateway acompanhamentoMapper;
 
     @InjectMocks
     private AcompanharOrdemServicoUseCase useCase;
 
     @Test
     void deveRetornarListaDeAcompanhamentos() {
-
-        String email = "cliente@email.com";
-
-        ClienteEntity cliente = new ClienteEntity();
-        cliente.setId(1L);
-
-        OrdemServicoEntity ordemServico = new OrdemServicoEntity();
-        ordemServico.setNumeroOs("OS001");
-
+        OrdemServicoEntity ordemServico = ordemServico("OS001");
         OrcamentoEntity orcamento = new OrcamentoEntity();
-
         HistoricoStatusOsEntity historico = new HistoricoStatusOsEntity();
+        AcompanhamentoOrdemServicoOutput output = mock(AcompanhamentoOrdemServicoOutput.class);
 
-        AcompanhamentoOrdemServicoOutput output =
-                mock(AcompanhamentoOrdemServicoOutput.class);
-
-        when(clienteGateway.findByUsuarioEmail(email))
-                .thenReturn(Optional.of(cliente));
-
-        when(ordemServicoGateway.findByClienteIdOrderByDataAberturaDesc(1L))
-                .thenReturn(List.of(ordemServico));
-
-        when(orcamentoGateway.findByNumeroOsAndStatus(
-                "OS001",
-                StatusOrcamento.DISPONIVEL))
+        configurarClienteComOs(ordemServico);
+        when(orcamentoGateway.findByNumeroOsAndStatus("OS001", StatusOrcamento.DISPONIVEL))
                 .thenReturn(Optional.of(orcamento));
-
         when(historicoStatusOsGateway.findByNumeroOsOrderByRegistradoEmAsc("OS001"))
                 .thenReturn(List.of(historico));
-
-        when(acompanhamentoMapper.mapToOutPut(
-                ordemServico,
-                orcamento,
-                List.of(historico)))
+        when(acompanhamentoMapper.mapToOutput(ordemServico, orcamento, List.of(historico)))
                 .thenReturn(output);
 
-        List<AcompanhamentoOrdemServicoOutput> resultado =
-                useCase.execute(email);
-
-        assertNotNull(resultado);
-        assertEquals(1, resultado.size());
-        assertEquals(output, resultado.getFirst());
-
-        verify(clienteGateway).findByUsuarioEmail(email);
-        verify(ordemServicoGateway)
-                .findByClienteIdOrderByDataAberturaDesc(1L);
-        verify(orcamentoGateway)
-                .findByNumeroOsAndStatus("OS001", StatusOrcamento.DISPONIVEL);
-        verify(historicoStatusOsGateway)
-                .findByNumeroOsOrderByRegistradoEmAsc("OS001");
-        verify(acompanhamentoMapper)
-                .mapToOutPut(ordemServico, orcamento, List.of(historico));
+        assertEquals(List.of(output), useCase.execute("cliente@email.com"));
     }
 
     @Test
     void deveUtilizarUltimaVersaoQuandoNaoExistirOrcamentoDisponivel() {
-
-        String email = "cliente@email.com";
-
-        ClienteEntity cliente = new ClienteEntity();
-        cliente.setId(1L);
-
-        OrdemServicoEntity ordemServico = new OrdemServicoEntity();
-        ordemServico.setNumeroOs("OS001");
-
+        OrdemServicoEntity ordemServico = ordemServico("OS001");
         OrcamentoEntity ultimaVersao = new OrcamentoEntity();
+        AcompanhamentoOrdemServicoOutput output = mock(AcompanhamentoOrdemServicoOutput.class);
 
-        AcompanhamentoOrdemServicoOutput output =
-                mock(AcompanhamentoOrdemServicoOutput.class);
-
-        when(clienteGateway.findByUsuarioEmail(email))
-                .thenReturn(Optional.of(cliente));
-
-        when(ordemServicoGateway.findByClienteIdOrderByDataAberturaDesc(1L))
-                .thenReturn(List.of(ordemServico));
-
-        when(orcamentoGateway.findByNumeroOsAndStatus(
-                "OS001",
-                StatusOrcamento.DISPONIVEL))
+        configurarClienteComOs(ordemServico);
+        when(orcamentoGateway.findByNumeroOsAndStatus("OS001", StatusOrcamento.DISPONIVEL))
                 .thenReturn(Optional.empty());
-
         when(orcamentoGateway.findTopByNumeroOsOrderByVersaoDesc("OS001"))
                 .thenReturn(Optional.of(ultimaVersao));
-
         when(historicoStatusOsGateway.findByNumeroOsOrderByRegistradoEmAsc("OS001"))
                 .thenReturn(Collections.emptyList());
-
-        when(acompanhamentoMapper.mapToOutPut(
-                ordemServico,
-                ultimaVersao,
-                Collections.emptyList()))
+        when(acompanhamentoMapper.mapToOutput(ordemServico, ultimaVersao, Collections.emptyList()))
                 .thenReturn(output);
 
-        List<AcompanhamentoOrdemServicoOutput> resultado =
-                useCase.execute(email);
-
-        assertEquals(1, resultado.size());
-        assertEquals(output, resultado.getFirst());
-
-        verify(orcamentoGateway)
-                .findByNumeroOsAndStatus("OS001", StatusOrcamento.DISPONIVEL);
-
-        verify(orcamentoGateway)
-                .findTopByNumeroOsOrderByVersaoDesc("OS001");
+        assertEquals(List.of(output), useCase.execute("cliente@email.com"));
     }
 
     @Test
     void deveRetornarOrcamentoNuloQuandoNaoExistirOrcamento() {
+        OrdemServicoEntity ordemServico = ordemServico("OS001");
+        AcompanhamentoOrdemServicoOutput output = mock(AcompanhamentoOrdemServicoOutput.class);
 
-        String email = "cliente@email.com";
-
-        ClienteEntity cliente = new ClienteEntity();
-        cliente.setId(1L);
-
-        OrdemServicoEntity ordemServico = new OrdemServicoEntity();
-        ordemServico.setNumeroOs("OS001");
-
-        AcompanhamentoOrdemServicoOutput output =
-                mock(AcompanhamentoOrdemServicoOutput.class);
-
-        when(clienteGateway.findByUsuarioEmail(email))
-                .thenReturn(Optional.of(cliente));
-
-        when(ordemServicoGateway.findByClienteIdOrderByDataAberturaDesc(1L))
-                .thenReturn(List.of(ordemServico));
-
-        when(orcamentoGateway.findByNumeroOsAndStatus(
-                "OS001",
-                StatusOrcamento.DISPONIVEL))
+        configurarClienteComOs(ordemServico);
+        when(orcamentoGateway.findByNumeroOsAndStatus("OS001", StatusOrcamento.DISPONIVEL))
                 .thenReturn(Optional.empty());
-
         when(orcamentoGateway.findTopByNumeroOsOrderByVersaoDesc("OS001"))
                 .thenReturn(Optional.empty());
-
         when(historicoStatusOsGateway.findByNumeroOsOrderByRegistradoEmAsc("OS001"))
                 .thenReturn(Collections.emptyList());
-
-        when(acompanhamentoMapper.mapToOutPut(
-                ordemServico,
-                null,
-                Collections.emptyList()))
+        when(acompanhamentoMapper.mapToOutput(ordemServico, null, Collections.emptyList()))
                 .thenReturn(output);
 
-        List<AcompanhamentoOrdemServicoOutput> resultado =
-                useCase.execute(email);
-
-        assertEquals(1, resultado.size());
-
-        verify(acompanhamentoMapper)
-                .mapToOutPut(ordemServico, null, Collections.emptyList());
+        assertEquals(List.of(output), useCase.execute("cliente@email.com"));
     }
 
     @Test
     void deveLancarExcecaoQuandoClienteNaoForEncontrado() {
+        when(clienteGateway.findIdByUsuarioEmail("ausente@email.com")).thenReturn(Optional.empty());
 
-        String email = "cliente@email.com";
-
-        when(clienteGateway.findByUsuarioEmail(email))
-                .thenReturn(Optional.empty());
-
-        ResponseStatusException exception =
-                assertThrows(ResponseStatusException.class,
-                        () -> useCase.execute(email));
+        ResponseStatusException exception = assertThrows(ResponseStatusException.class,
+                () -> useCase.execute("ausente@email.com"));
 
         assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
-        assertEquals(
-                "404 NOT_FOUND \"Cliente autenticado não encontrado.\"",
-                exception.getMessage());
-
-        verify(clienteGateway).findByUsuarioEmail(email);
-
-        verifyNoInteractions(
-                ordemServicoGateway,
-                orcamentoGateway,
-                historicoStatusOsGateway,
-                acompanhamentoMapper);
+        verifyNoInteractions(ordemServicoGateway, orcamentoGateway,
+                historicoStatusOsGateway, acompanhamentoMapper);
     }
 
     @Test
     void deveRetornarListaVaziaQuandoClienteNaoPossuirOrdensServico() {
-
-        String email = "cliente@email.com";
-
-        ClienteEntity cliente = new ClienteEntity();
-        cliente.setId(1L);
-
-        when(clienteGateway.findByUsuarioEmail(email))
-                .thenReturn(Optional.of(cliente));
-
+        when(clienteGateway.findIdByUsuarioEmail("cliente@email.com")).thenReturn(Optional.of(1L));
         when(ordemServicoGateway.findByClienteIdOrderByDataAberturaDesc(1L))
                 .thenReturn(Collections.emptyList());
 
-        List<AcompanhamentoOrdemServicoOutput> resultado =
-                useCase.execute(email);
-
-        assertNotNull(resultado);
-        assertTrue(resultado.isEmpty());
-
-        verify(clienteGateway).findByUsuarioEmail(email);
-        verify(ordemServicoGateway)
-                .findByClienteIdOrderByDataAberturaDesc(1L);
-
-        verifyNoInteractions(
-                orcamentoGateway,
-                historicoStatusOsGateway,
-                acompanhamentoMapper);
+        assertTrue(useCase.execute("cliente@email.com").isEmpty());
+        verifyNoInteractions(orcamentoGateway, historicoStatusOsGateway, acompanhamentoMapper);
     }
 
+    private void configurarClienteComOs(OrdemServicoEntity ordemServico) {
+        when(clienteGateway.findIdByUsuarioEmail("cliente@email.com")).thenReturn(Optional.of(1L));
+        when(ordemServicoGateway.findByClienteIdOrderByDataAberturaDesc(1L))
+                .thenReturn(List.of(ordemServico));
+    }
+
+    private OrdemServicoEntity ordemServico(String numeroOs) {
+        OrdemServicoEntity ordemServico = new OrdemServicoEntity();
+        ordemServico.setNumeroOs(numeroOs);
+        return ordemServico;
+    }
 }
